[package]
authors = ["Fxtack <fxtack@foxmail.com>"]
categories = ["command-line-utilities"]
description = "The Windows error/status code manual."
repository = "https://github.com/fxtack/wincodeman"
license = "MIT"
name = "wincodeman"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "wcm"
path = "src/main.rs"

[dependencies.windows]
version = "0.56.0"
features = [ "Win32_Foundation" ]

[dependencies.clap]
version = "3.2.25"

[build-dependencies]
embed-resource = "1.5.1"